--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,30 @@
     background-color: #525252;
 }
 
+/*---------------------------------------------Special Paddings/Margins/Text-*/
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
 /*---------------------------------------------Heading-*/
 
 header {
@@ -62,7 +86,8 @@ header {
 
 /*---------------------------------------------Navigation-*/
 
-#nav {    /* Was not working first, now working. Find out why */
+#nav {
+    /* Was not working first, now working. Find out why */
     margin: 0;
 }
 
@@ -108,6 +133,56 @@ header {
     height: 120px;
 }
 
+/*---------------------------------------------Footer-*/
 
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
+}
+
+footer .cv-pdf i {
+    color: #fafafa;   
+    text-align: center;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+     transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #e84610;
+}
+
+#footer-details {
+    margin: 20px;
+}
 
 
