--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,4 +206,29 @@ footer .cv-pdf i:hover {
     margin: 20px;
 }
 
+/*---------------------------------------------Three reasons section-*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
